Rukmini's homework this week

--- a/pages/my-github.html
+++ b/pages/my-github.html
@@ -70,7 +70,7 @@
                 </div>
 
                 <p class="mb-5">Use AJAX to load your repos from your Github and show them on this page.</p>
-
+                <span>Search for a GitHub User:</span><input type='text' placeholder='Enter username...' id='repos-search-box'><button id='repos-search-button'>Search</button>
                 <ul id="repos-list" class="list-inline list-social-icons mb-0">
                     <li>
                         Your list of repos should appear here
