--- a/pages/pull-requests.html
+++ b/pages/pull-requests.html
@@ -66,6 +66,7 @@
                 </h1>
 
                 <p class="mb-5">Show your list of PRs in this page</p>
+                <span>Filter PRs by user:</span><input id="pr-search-box" type="text" placeholder="Search for a user...">
                 <ul id="pull-requests-list" class="list-inline list-social-icons mb-0">
                     <li>
                         Your list of PRs should appear here
@@ -85,7 +86,7 @@
 
     <!-- Custom scripts for this template -->
     <script src="../js/resume.min.js"></script>
-    <script src="../js/my-github.js"></script>
+    <script src="../js/pull-requests.js"></script>
 
 </body>
 
